--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Evan Helbig</title>
+  <meta name="description" content="Evan Helbig's Portfolio Site">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<header class="page-header">
+		<h1>Evan Helbig</h1>
+	</header>
+	<main>
+		<p>This is dummy text</p>
+	</main>	
+
+	<script src="myscripts.js"></script>
+</body>
+</html>
